[gd_scene load_steps=4 format=3 uid="uid://bs484n6opiqsl"]

[ext_resource type="Script" uid="uid://dklpdh527rwgy" path="res://titlemenus/settings_menu.gd" id="1_ebjd2"]
[ext_resource type="PackedScene" uid="uid://cs3ift8tg5po" path="res://music_credit.tscn" id="2_2glds"]
[ext_resource type="FontFile" uid="uid://kg3qgerw6jf0" path="res://fonts/comicbd.ttf" id="2_ebjd2"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ebjd2")

[node name="Header" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ebjd2")
theme_override_font_sizes/font_size = 55
text = "Waffle Configuration"
horizontal_alignment = 1

[node name="DoneButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = 292.0
offset_right = -339.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ebjd2")
theme_override_font_sizes/font_size = 30
text = "Done"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -385.0
offset_top = 125.0
offset_right = -9.0
offset_bottom = -219.0
grow_horizontal = 0
grow_vertical = 2
min_value = -5.0
max_value = 5.0
step = 0.01

[node name="VolumeSliderLabel" type="Label" parent="VolumeSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -375.0
offset_top = -46.0
offset_right = 2.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ebjd2")
theme_override_font_sizes/font_size = 20
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MusicSelect" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -378.0
offset_top = 201.0
offset_right = -5.0
offset_bottom = -128.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ebjd2")
selected = 0
item_count = 2
popup/item_0/text = "John \"Joy\" Tay - Delve!!!"
popup/item_0/id = 0
popup/item_1/text = "hkmori - anybody can find love (except you.)"
popup/item_1/id = 1

[node name="MusicSelectLabel" type="Label" parent="MusicSelect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -370.0
offset_top = -61.0
offset_right = -1.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ebjd2")
theme_override_font_sizes/font_size = 20
text = "Music Selection"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MusicCredit" parent="." instance=ExtResource("2_2glds")]
layout_mode = 1
anchors_preset = 11
anchor_top = 0.0
offset_left = -231.0
offset_top = 215.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0

[connection signal="pressed" from="DoneButton" to="." method="_on_done_button_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="item_selected" from="MusicSelect" to="." method="_on_music_select_item_selected"]
